[package]
authors = ["Rafael Lemos <contact@flemosr.com"]
name = "envoy-proto-collect"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "collect-protos"
path = "src/main.rs"

[dependencies]
glob = "0.3.1"
tonic-build = { version = "0.9.2", default-features = false, features = [
    "prost",
] }

[dev-dependencies]
prost = { version = "0.11.9", default-features = false }
tonic = { version = "0.9.2", default-features = false, features = [
    "codegen",
    "transport",
    "prost",
] }
