[package]
name = "envoy-types"
authors = ["Rafael Lemos <contact@flemosr.com"]
categories = ["web-programming", "network-programming"]
description = """
Collection of protobuf types and other assets to work with the Envoy Proxy
through Rust services.
"""
edition = "2021"
homepage = "https://github.com/flemosr/envoy-types"
keywords = ["rpc", "grpc", "async", "envoy", "extauthz"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/flemosr/envoy-types"
version = "0.2.0"

[dependencies]
futures-core = "0.3"
prost = { version = "0.12.3", default-features = false, features = [
    "prost-derive",
] }
tonic = { version = "0.10.2", default-features = false, features = [
    "codegen",
    "transport",
    "prost",
] }

[dev-dependencies]
glob = "0.3.1"
tonic-build = { version = "0.10.2", default-features = false, features = [
    "prost",
    "cleanup-markdown",
] }
