[package]
name = "envoy-types"
authors = ["Rafael Lemos <contact@flemosr.com"]
categories = ["web-programming", "network-programming"]
description = """
Collection of protobuf types and other assets to work with the Envoy Proxy
through Rust gRPC services.
"""
edition = "2021"
homepage = "https://github.com/flemosr/envoy-types"
keywords = ["rpc", "grpc", "envoy", "extauthz", "protobuf"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/flemosr/envoy-types"
rust-version = { workspace = true }
version = "0.7.0"

[dependencies]
futures-core = "0.3"
prost = { version = "0.14", default-features = false, features = ["derive"] }
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "transport",
] }
tonic-prost = "0.14"

[dev-dependencies]
glob = "0.3"
tonic-prost-build = "0.14"
