[package]
name = "examples"
authors = ["Rafael Lemos <contact@flemosr.com"]
edition = "2021"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[[example]]
name = "authorization-server-basic"
path = "src/authorization_server_basic.rs"

[[example]]
name = "authorization-server-full"
path = "src/authorization_server_full.rs"

[[example]]
name = "authorization-server-pb-only"
path = "src/authorization_server_pb_only.rs"

[dependencies]
envoy-types = { path = "../envoy-types" }
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tonic = "0.9.2"
