[package]
name = "examples"
authors = ["Rafael Lemos <contact@flemosr.com"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = { workspace = true }
version = "0.1.0"

[[example]]
name = "authorization-server-basic"
path = "src/ext_authz/authorization_server_basic.rs"

[[example]]
name = "authorization-server-full"
path = "src/ext_authz/authorization_server_full.rs"

[[example]]
name = "authorization-server-pb-only"
path = "src/ext_authz/authorization_server_pb_only.rs"

[dependencies]
envoy-types = { path = "../envoy-types" }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
