[package]
name = "envoy-types-tools"
authors = ["Rafael Lemos <contact@flemosr.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = { workspace = true }
version = "0.1.0"

[[bin]]
name = "proto-collect"
path = "src/proto-collect.rs"

[[bin]]
name = "proto-codegen"
path = "src/proto-codegen.rs"

[dependencies]
glob = "0.3"
prost-build = "0.14.3"
tonic-prost-build = "0.14"
